--- a/.hgignore
+++ b/.hgignore
@@ -2,6 +2,7 @@ syntax: glob
 bircd
 mkpasswd
 bcreationdate
+bcreationdate.pas
 dcu
 obj
 *.exe
@@ -13,6 +14,7 @@ obj
 *.ini
 *.pid
 *.or
+*.o
 *~
 bircd.ini
 ircd.conf
