--- a/bircd.cfg
+++ b/bircd.cfg
@@ -33,8 +33,8 @@
 -$M16384,1048576
 -K$00400000
 -N"dcu"
--LE"c:\program files\borland\delphi6\Projects\Bpl"
--LN"c:\program files\borland\delphi6\Projects\Bpl"
+-LE"e:\program files\borland\delphi6\Projects\Bpl"
+-LN"e:\program files\borland\delphi6\Projects\Bpl"
 -U"..\libs\lcore"
 -O"..\libs\lcore"
 -I"..\libs\lcore"
